changed images extensions

--- a/portfolio.html
+++ b/portfolio.html
@@ -144,7 +144,7 @@
     <br><br>
      <div class="row shadow">
       <div class="col-lg-4">
-        <img src="./images/project/hr-support.PNG" style="width: 100%; object-fit: cover;">
+        <img src="./images/project/hr-support.jpg" style="width: 100%; object-fit: cover;">
       </div>
       <div class="col-lg-8" style="padding-left: 50px;">
         <h2 style="font-weight: 600;">HR support system</h2>
@@ -178,7 +178,7 @@
        </ul>
        <p>Technologies:</p>
        <div class="techs">
-         <img src="images/tech/angular.png" class="img-tech" >
+         <img src="images/tech/angular.jpg" class="img-tech" >
        </div>
       </div>
       <div class="col-lg-4">
