fixed images extensions

--- a/portfolio.html
+++ b/portfolio.html
@@ -178,11 +178,11 @@
        </ul>
        <p>Technologies:</p>
        <div class="techs">
-         <img src="images/tech/angular.jpg" class="img-tech" >
+         <img src="images/tech/angular.png" class="img-tech" >
        </div>
       </div>
       <div class="col-lg-4">
-        <img src="./images/project/movies.PNG" style="width: 100%; object-fit: cover;">
+        <img src="./images/project/movies.jpg" style="width: 100%; object-fit: cover;">
       </div>
     </div>
 
