changed button styles

--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@ poster="images/hero_poster.jpg" playsinline="" autoplay="" loop="" muted="">
               </div>
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 " style="text-align: center;">
-                      <br><br>
-                      <a id="title" class="btn-grad" href="#" data-toggle="modal" data-target="#about" style="font-weight: 500;">About</a><br><br>
+                      <br>
+                      <div class="button-container" style="display: flex; justify-content: center;">
+                        <a id="title" class="btn btn-4" href="#" data-toggle="modal" data-target="#about" style="font-weight: 600;">About</a><br><br>
+                        <a id="title" class="btn btn-6" href="./portfolio.html" style="font-weight: 600;">Portfolio</a><br><br>
+
+                      </div>
                       <br>  
                       <div class="icons">
                           <a href="https://github.com/Achrefothmeni" target="_blank" id="github"> <img src="./images/icons/github.png" class="icon" style="margin: 10px;"> </a>
