--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
          <li >
-              <a href="./portfolio.html" > 
-                <img src="images/icons/list.png"/>
-                Portfolio
-              </a>
+              
         </li>
 
       </ul>
@@ -125,7 +122,7 @@ poster="images/hero_poster.jpg" playsinline="" autoplay="" loop="" muted="">
 
     <div class="footer">
       <div class="container">
-             Made with <i class="fa fa-heart heart"></i> by Achref Othmani
+             <!-- Made with <i class="fa fa-heart heart"></i> by Achref Othmani-->
       </div>
     </div>
  </div>
