--- a/portfolio.html
+++ b/portfolio.html
@@ -30,13 +30,10 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ">
       <ul class="nav navbar-nav">
          <li >
-              <a style="color: #fff;" href="./index.html" > 
-                <img src="images/icons/back.png"/>
-                Home
-              </a>
+              <a  class="btn btn-6" href="./index.html" style="font-weight: 600;"> <img src="images/icons/back.png"/> Home</a>
         </li>
 
       </ul>
@@ -45,11 +42,13 @@
   </div><!-- /.container -->
 </nav>  
 
-<div class="top" style="background-image: url('images/top.jpg')">
-  
+
+<div class="top" style="background-image: url('images/top.jpg'); text-align: center; justify-content: center; " >
+  <h1 style="font-weight: 600; color: #fff; padding-top: 110px; margin: 0;">My portfolio</h1>
+  <h5 style="text-align: center; color: #fff;">Projects that I've worked on</h5>
 </div>
-<h1 style="text-align: center; font-weight: 600; margin-top: 50px;">Portfolio</h1>
-<h5 style="text-align: center;">Projects that I've worked on</h5>
+
+
  <div class="container" style="margin-top: 100px;">
   
      <div class="row shadow">
@@ -191,7 +190,7 @@
 <br><br><br>
  <div class="footer">
     <div class="container">
-           Made with <i class="fa fa-heart heart"></i> by Achref Othmani
+          <!-- Made with <i class="fa fa-heart heart"></i> by Achref Othmani-->
     </div>
   </div>
  
