added icon on top

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
          <li >
-              
+              <img src="images/ao.png" style="width: 32px;"/>
         </li>
 
       </ul>
