--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ poster="images/hero_poster.jpg" playsinline="" autoplay="" loop="" muted="">
               <span aria-hidden="true">&times;</span>
             </button>
             <br>
-            <p style="font-size: 20px;">Person achrefOthmani = <span style="font-size: 14px;"> new Person(" I am Achref Othmani a software engineering student and as we know everyone has his hobby, mine is programming, I’ve worked on different project both academic and personal, the projects are different some of them are backend projects and some are frontend projects, and some are data related projects, so that’s why I chose to obtain a business intelligence degree and a software engineering degree to combine both area and deliver secure, scalable and high performant solutions. ");</span></p>
+            <p style="font-size: 20px;">Person achrefOthmani = <span style="font-size: 14px;"> new Person(" I am Achref Othmani a software engineering student and as we know everyone has his hobby, mine is programming, I’ve worked on different projects: academic, professional and personal, each one is different from the others, some of them are backend projects and some are frontend projects, and some are data related projects. My goal is alawys to deliver secure, scalable and high performant solutions. ");</span></p>
           </div>
           
         </div>
