--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ poster="images/hero_poster.jpg" playsinline="" autoplay="" loop="" muted="">
 <!--  H1 can have 2 designs: "logo" and "logo cursive"           -->
         
         <div class="content">
-            <h4 class="motto">I am <span style="font-weight: 700; color: #f46b45;">Achref Othmani</span>, a software engineering student & fullstack developer</h4>
+            <h4 class="motto">I am <span style="font-weight: 700; color: #f46b45;">Achref Othmani</span>, a software engineering</h4>
             <div class="subscribe">
               <div>
               </div>
@@ -113,7 +113,7 @@ poster="images/hero_poster.jpg" playsinline="" autoplay="" loop="" muted="">
               <span aria-hidden="true">&times;</span>
             </button>
             <br>
-            <p style="font-size: 20px;">Person achrefOthmani = <span style="font-size: 14px;"> new Person(" I am Achref Othmani a software engineering student and as we know everyone has his hobby, mine is programming, I’ve worked on different projects: academic, professional and personal, each one is different from the others, some of them are backend projects and some are frontend projects, and some are data related projects. I'm interested in programming because I have a passion for tech, creativity, and finding solutions. I love the mental challenge that programming presents and the possibility of being able to conceive a new idea and bring it to fruition. My goal is always  to deliver secure, scalable and high performant solutions. ");</span></p>
+            <p style="font-size: 20px;">Person achrefOthmani = <span style="font-size: 14px;"> new Person(" I am Achref Othmani a software engineering and as we know everyone has his hobby, mine is programming, I’ve worked on different projects: academic, professional and personal, each one is different from the others, some of them are backend projects and some are frontend projects, and some are data related projects. I'm interested in programming because I have a passion for tech, creativity, and finding solutions. I love the mental challenge that programming presents and the possibility of being able to conceive a new idea and bring it to fruition. My goal is always  to deliver secure, scalable and high performant solutions. ");</span></p>
           </div>
           
         </div>
